--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/curso-react-platzi/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#97ca3f"/><meta name="description" content="Web site created using create-react-app"/><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&family=Overpass:wght@400;700&display=swap" rel="stylesheet"><title>React App</title><script defer="defer" src="/curso-react-platzi/static/js/main.fea885b6.js"></script><link href="/curso-react-platzi/static/css/main.11fac96e.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><div id="modal"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  
+  <title>Frontend Mentor | 3-column preview card component</title>
+
+  <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
+<body>
+  <main>
+    <section class="columns__container">
+      <section class="column sedans__column">
+        <figure>
+          <img src="./images/icon-sedans.svg" alt="">
+        </figure>
+        <div>
+          <h1>SEDANS</h1>
+          <P>
+            Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the City or on your next road trip.
+          </P>
+        </div>
+        <a href="#">Learn More</a>
+      </section>
+      <section class="column suvs__column">
+        <figure>
+          <img src="./images/icon-suvs.svg" alt="">
+        </figure>
+        <div>
+          <h1>SUVS</h1>
+          <P>
+            Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.
+          </P>
+        </div>
+        <a href="#">Learn More</a>
+      </section>
+      <section class="column luxury__column">
+        <figure>
+          <img src="./images/icon-luxury.svg" alt="">
+        </figure>
+        <div>
+          <h1>LUXURY</h1>
+          <P>
+            Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.
+          </P>
+        </div>
+        <a href="#">Learn More</a>
+      </section>
+    </section>
+  </main>
+</body>
+</html>
